--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: mysql
     restart: always
     ports:
-      - "3306:3306"
+      - "3307:3307"
     environment:
       MYSQL_ROOT_PASSWORD: 123456
       MYSQL_DATABASE: cap2240db
@@ -18,9 +18,10 @@ services:
   web:
     build: .
     container_name: django_app
-    command: /entrypoint.sh
+    # command: /entrypoint.sh
+    command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - .:/app
+      - .:/code
     ports:
       - "8000:8000"
     depends_on:
@@ -37,7 +38,7 @@ services:
     environment:
       GUACD_HOSTNAME: guacd
       MYSQL_HOSTNAME: mysql
-      MYSQL_PORT: 3306
+      MYSQL_PORT: 3307
       MYSQL_DATABASE: guacamole_db
       MYSQL_USER: guacadmin
       MYSQL_PASSWORD: 123456
